<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_two_dp"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">    


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textSize="30sp"
        android:textColor="@color/stratos"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_five_dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/sienna"
        android:textAlignment="viewStart"
        android:layout_margin="@dimen/margin_five_dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        android:id="@+id/nameEditText"
        android:padding="@dimen/margin_five_dp"
        android:layout_marginLeft="@dimen/margin_five_dp"
        android:layout_marginRight="@dimen/margin_five_dp"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="@color/sienna"
        android:textAlignment="viewStart"
        android:layout_margin="@dimen/margin_five_dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:id="@+id/emailEditText"
        android:padding="5dp"
        android:layout_marginLeft="@dimen/margin_five_dp"
        android:layout_marginRight="@dimen/margin_five_dp"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/required_password"
        android:textSize="18sp"
        android:textColor="@color/sienna"
        android:textAlignment="viewStart"
        android:layout_margin="@dimen/margin_five_dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/create_password"
        android:id="@+id/passwordEditText"
        android:padding="@dimen/margin_five_dp"
        android:layout_marginLeft="@dimen/margin_five_dp"
        android:layout_marginRight="@dimen/margin_five_dp"
        android:background="@drawable/edit_text_border"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textSize="18sp"
        android:textColor="@color/sienna"
        android:textAlignment="viewStart"
        android:layout_margin="@dimen/margin_five_dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/enter_number"
        android:maxLength="10"
        android:id="@+id/mobileNumberEditText"
        android:padding="5dp"
        android:layout_marginLeft="@dimen/margin_five_dp"
        android:layout_marginRight="@dimen/margin_five_dp"
        android:background="@drawable/edit_text_border"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margin_five_dp"
        android:layout_marginLeft="@dimen/margin_five_dp"
        android:background="@drawable/button_background"
        android:onClick="onClickSubmitButton" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>