<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_two_dp"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/signInLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/stratos"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_ten_dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_username"
            android:id="@+id/emailEditText"
            android:padding="5dp"
            android:layout_marginLeft="@dimen/margin_three_dp"
            android:layout_marginRight="@dimen/margin_three_dp"
            android:background="@drawable/edit_text_border"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/sienna"
            android:textAlignment="viewStart"
            android:layout_margin="@dimen/margin_five_dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:id="@+id/passwordEditText"
            android:padding="@dimen/margin_five_dp"
            android:layout_marginLeft="@dimen/margin_three_dp"
            android:layout_marginRight="@dimen/margin_three_dp"
            android:background="@drawable/edit_text_border"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            style="?attr/borderlessButtonStyle"
            android:onClick="onClickSignInButton"
            android:layout_marginTop="@dimen/margin_five_dp"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/button_background"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPasswordTextView"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textColor="@color/solidBlue"
            android:textAlignment="viewEnd"
            android:padding="@dimen/margin_five_dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_a_user"
            android:textSize="15sp"
            android:textColor="@color/solidBlue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_ten_dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            style="?attr/borderlessButtonStyle"
            android:onClick="onClickSignUpButton"
            android:layout_marginLeft="@dimen/margin_five_dp"
            android:layout_marginRight="@dimen/margin_five_dp"
            android:background="@drawable/button_background" />

    </LinearLayout>



    </ScrollView>



</RelativeLayout>